package com.polarstar.gofpattern.creational.prototype;

/**
 * Created by zhangxuegang on 2016/5/11.
 */
public interface Prototype {
    public Prototype clone();

    public String cloneStr();
}
